fixed font issue on mobile

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -1,97 +1,3 @@
-  /* barlow-regular - latin */
-    @font-face {
-      font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-      font-family: "Barlow";
-      font-style: normal;
-      font-weight: 400;
-      src: url("/fonts/barlow-v12-latin-regular.eot"); /* IE9 Compat Modes */
-      src:
-        url("/fonts/barlow-v12-latin-regular.eot?#iefix")
-          format("embedded-opentype"),
-        /* IE6-IE8 */ url("/fonts/barlow-v12-latin-regular.woff2")
-          format("woff2"),
-        /* Super Modern Browsers */ url("/fonts/barlow-v12-latin-regular.woff")
-          format("woff"),
-        /* Modern Browsers */ url("/fonts/barlow-v12-latin-regular.ttf")
-          format("truetype"),
-        /* Safari, Android, iOS */
-          url("/fonts/barlow-v12-latin-regular.svg#Barlow") format("svg"); /* Legacy iOS */
-    }
-    /* barlow-italic - latin */
-    @font-face {
-      font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-      font-family: "Barlow";
-      font-style: italic;
-      font-weight: 400;
-      src: url("/fonts/barlow-v12-latin-italic.eot"); /* IE9 Compat Modes */
-      src:
-        url("/fonts/barlow-v12-latin-italic.eot?#iefix")
-          format("embedded-opentype"),
-        /* IE6-IE8 */ url("/fonts/barlow-v12-latin-italic.woff2")
-          format("woff2"),
-        /* Super Modern Browsers */ url("/fonts/barlow-v12-latin-italic.woff")
-          format("woff"),
-        /* Modern Browsers */ url("/fonts/barlow-v12-latin-italic.ttf")
-          format("truetype"),
-        /* Safari, Android, iOS */
-          url("/fonts/barlow-v12-latin-italic.svg#Barlow") format("svg"); /* Legacy iOS */
-    }
-    /* barlow-regular - latin */
-    @font-face {
-      font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-      font-family: "Barlow";
-      font-style: normal;
-      font-weight: 400;
-      src: url("../fonts/barlow-v12-latin-regular.eot"); /* IE9 Compat Modes */
-      src:
-        url("../fonts/barlow-v12-latin-regular.eot?#iefix")
-          format("embedded-opentype"),
-        /* IE6-IE8 */ url("../fonts/barlow-v12-latin-regular.woff2")
-          format("woff2"),
-        /* Super Modern Browsers */
-          url("../fonts/barlow-v12-latin-regular.woff") format("woff"),
-        /* Modern Browsers */ url("../fonts/barlow-v12-latin-regular.ttf")
-          format("truetype"),
-        /* Safari, Android, iOS */
-          url("../fonts/barlow-v12-latin-regular.svg#Barlow") format("svg"); /* Legacy iOS */
-    }
-    /* barlow-700 - latin */
-    @font-face {
-      font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-      font-family: "Barlow";
-      font-style: normal;
-      font-weight: 700;
-      src: url("../fonts/barlow-v12-latin-700.eot"); /* IE9 Compat Modes */
-      src:
-        url("../fonts/barlow-v12-latin-700.eot?#iefix")
-          format("embedded-opentype"),
-        /* IE6-IE8 */ url("../fonts/barlow-v12-latin-700.woff2") format("woff2"),
-        /* Super Modern Browsers */ url("../fonts/barlow-v12-latin-700.woff")
-          format("woff"),
-        /* Modern Browsers */ url("../fonts/barlow-v12-latin-700.ttf")
-          format("truetype"),
-        /* Safari, Android, iOS */
-          url("../fonts/barlow-v12-latin-700.svg#Barlow") format("svg"); /* Legacy iOS */
-    }
-    /* barlow-700italic - latin */
-    @font-face {
-      font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-      font-family: "Barlow";
-      font-style: italic;
-      font-weight: 700;
-      src: url("../fonts/barlow-v12-latin-700italic.eot"); /* IE9 Compat Modes */
-      src:
-        url("../fonts/barlow-v12-latin-700italic.eot?#iefix")
-          format("embedded-opentype"),
-        /* IE6-IE8 */ url("../fonts/barlow-v12-latin-700italic.woff2")
-          format("woff2"),
-        /* Super Modern Browsers */
-          url("../fonts/barlow-v12-latin-700italic.woff") format("woff"),
-        /* Modern Browsers */ url("../fonts/barlow-v12-latin-700italic.ttf")
-          format("truetype"),
-        /* Safari, Android, iOS */
-          url("../fonts/barlow-v12-latin-700italic.svg#Barlow") format("svg"); /* Legacy iOS */
-    }
 
     :root {
 
